--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: savR
 Type: Package
 Title: Parse and analyze Illumina SAV files
-Version: 1.37.0
+Version: 1.37.1
 Date: 2015-07-28
 Author: R. Brent Calder
 Maintainer: R. Brent Calder <brent.calder@einstein.yu.edu>
@@ -22,3 +22,4 @@ Suggests:
     Cairo,
     testthat
 biocViews: Sequencing
+PackageStatus: Deprecated
